--- a/STA-Backend/src/App.css
+++ b/STA-Backend/src/App.css
@@ -112,6 +112,8 @@ button.signin-signup {
 /* Table Styles */
 .table-container {
   margin-top: 20px;
+  margin-bottom: 40px;
+  margin-left: 20px;
   overflow-x: auto;
   background-color: #fff;
   padding: 20px;
