--- a/STA-Backend/src/App.css
+++ b/STA-Backend/src/App.css
@@ -113,6 +113,7 @@ button.signin-signup {
 .table-container {
   margin-top: 20px;
   margin-bottom: 40px;
+  margin-left: 20px;
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
